<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="sent_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_android_developer" id="url_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">vaiwork@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="founded_nothing">Ничего не нашлось</string>
    <string name="error_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="your_search">Вы искали</string>
    <string name="activity_pleer_hint_track_name">Название трека</string>
    <string name="activity_pleer_hont_artist_name">Название артиста</string>
    <string name="activity_pleer_hint_spend_time">00:00</string>
    <string name="activity_pleer_text_track_time">Длительность</string>
    <string name="activity_pleer_text_album">Альбом</string>
    <string name="activity_pleer_hint_album">Название альбома</string>
    <string name="activity_pleer_text_year">Год</string>
    <string name="activity_pleer_hint_year">Год выхода трека</string>
    <string name="activity_pleer_text_genre">Жанр</string>
    <string name="activity_pleer_hint_genre">Название жанра</string>
    <string name="activity_pleer_text_country">Страна</string>
    <string name="activity_pleer_hint_country">Название страны</string>
    <string name="fragment_favourites_tracks_your_media_empty">Ваша медиатека пуста</string>
    <string name="fragment_playlists_you_do_not_create_no_one_playlists">Вы не создали ни одного плейлиста</string>
    <string name="fragment_playlists_new_playlist">Новый плейлист</string>
    <string name="activity_media_favourites_tracks">Избранные треки</string>
    <string name="activity_media_playlists">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>