<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/activitySettingsTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="?attr/colorOnPrimary"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size"
                tools:targetApi="p"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/id_switch_dark_mode"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/ys_display_regular"
        android:gravity="start"
        android:paddingStart="@dimen/switch_text_settings_activity_padding_start_end"
        android:paddingTop="@dimen/switch_text_settings_activity_padding_top_bottom"

        android:paddingEnd="@dimen/switch_text_settings_activity_padding_start_end"

        android:paddingBottom="@dimen/switch_text_settings_activity_padding_top_bottom"
        android:text="@string/dark_theme"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"

        android:textSize="@dimen/text_settings_activity_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            style="@style/activitySettingsTextView"
            android:text="@string/sent_app" />

        <ImageView
            android:id="@+id/id_sent_app"
            style="@style/activitySettingsImageView"
            android:minWidth="@dimen/icon_sent_app_min_width"
            android:minHeight="@dimen/icon_sent_app_min_height"
            android:src="@drawable/sent_app_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            style="@style/activitySettingsTextView"
            android:text="@string/write_support" />

        <ImageView
            android:id="@+id/id_write_support"
            style="@style/activitySettingsImageView"
            android:minWidth="@dimen/icon_write_support_min_width"
            android:minHeight="@dimen/icon_write_support_min_height"
            android:src="@drawable/write_support_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            style="@style/activitySettingsTextView"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/id_user_agreement"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginBottom="@dimen/icon_margin_bottom"
            android:layout_weight="1"
            android:minWidth="@dimen/icon_write_support_min_width"
            android:minHeight="@dimen/icon_user_agreement_min_height"
            android:scaleType="fitEnd"
            android:src="@drawable/user_agreement_icon" />
    </LinearLayout>

</LinearLayout>