<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/activityPleerTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPleerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_pleer_back_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/activity_pleer_toolbar_margin"
        android:layout_marginTop="@dimen/activity_pleer_toolbar_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/activity_pleer_vertical_guideline_constraint_guide_begin_end"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/activity_pleer_vertical_guideline_constraint_guide_begin_end"
        />

    <ImageView
        android:id="@+id/activity_pleer_album_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/activity_pleer_album_image_margin_top"
        android:src="@drawable/placeholder_album_image_light_mode"
        app:layout_constraintBottom_toTopOf="@id/activity_pleer_track_name"
        app:layout_constraintEnd_toStartOf="@+id/activity_pleer_end_vertical_guideline"
        app:layout_constraintStart_toEndOf="@id/activity_pleer_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/activity_pleer_back_toolbar" />

    <TextView
        android:id="@+id/activity_pleer_track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/activityPleerDynamicUpperTextView"
        android:hint="@string/activity_pleer_hint_track_name"
        android:textSize="@dimen/activity_pleer_text_view_track_name_text_size"
        app:layout_constraintEnd_toEndOf="@id/activity_pleer_end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@id/activity_pleer_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/activity_pleer_album_image"
        app:layout_constraintBottom_toTopOf="@id/activity_pleer_artist_name"
        android:layout_marginTop="@dimen/activity_pleer_text_view_track_name_margin_top"
        />

    <TextView
        android:id="@+id/activity_pleer_artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/activityPleerDynamicUpperTextView"
        android:layout_marginTop="@dimen/activity_pleer_text_view_artist_name_margin_top"
        android:hint="@string/activity_pleer_hont_artist_name"
        app:layout_constraintEnd_toEndOf="@id/activity_pleer_end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@id/activity_pleer_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/activity_pleer_track_name"
        app:layout_constraintBottom_toTopOf="@id/activity_pleer_buttons_guideline"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_buttons_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <ImageView
        android:id="@+id/activity_pleer_add_to_playlist_image_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_pleer_buttons_guideline"
        app:layout_constraintStart_toStartOf="@id/activity_pleer_start_vertical_guideline"
        app:layout_constraintEnd_toStartOf="@id/activity_pleer_play_image_view"
        app:layout_constraintBottom_toTopOf="@id/activity_pleer_spend_time_text_view"
        android:src="@drawable/add_to_playlist_light_mode_button"
        android:backgroundTint="?attr/colorPrimary"
        />

    <ImageView
        android:id="@+id/activity_pleer_play_image_view"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/activity_pleer_buttons_guideline"
        app:layout_constraintStart_toEndOf="@id/activity_pleer_add_to_playlist_image_view"
        app:layout_constraintEnd_toStartOf="@id/activity_pleer_like_image_view"
        app:layout_constraintBottom_toTopOf="@id/activity_pleer_spend_time_text_view"
        android:src="@drawable/play_light_mode_button"
        android:backgroundTint="?attr/colorPrimary"
        />

    <ImageView
        android:id="@+id/activity_pleer_like_image_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_pleer_buttons_guideline"
        app:layout_constraintStart_toEndOf="@id/activity_pleer_play_image_view"
        app:layout_constraintEnd_toStartOf="@id/activity_pleer_end_vertical_guideline"
        app:layout_constraintBottom_toTopOf="@id/activity_pleer_spend_time_text_view"
        android:src="@drawable/hearth_light_mode_button"
        android:backgroundTint="?attr/colorPrimary"
        />

    <TextView
        android:id="@+id/activity_pleer_spend_time_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/activityPleerDynamicUpperTextView"
        android:hint="@string/activity_pleer_hint_spend_time"
        android:gravity="center_horizontal|top"
        app:layout_constraintTop_toBottomOf="@id/activity_pleer_play_image_view"
        app:layout_constraintStart_toStartOf="@id/activity_pleer_play_image_view"
        app:layout_constraintEnd_toEndOf="@id/activity_pleer_play_image_view"
        app:layout_constraintBottom_toTopOf="@id/activity_pleer_album_guideline"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_album_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/activity_pleer_time_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/activityPleerStaticTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_album_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_time_guideline"
        app:layout_constraintEnd_toStartOf="@id/activity_pleer_time"
        android:text="@string/activity_pleer_text_track_time"
        />

    <TextView
        android:id="@+id/activity_pleer_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/activityPleerDynamicTextView"
        app:layout_constraintStart_toEndOf="@id/activity_pleer_time_static"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_album_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_time_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/activity_pleer_hint_spend_time"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_time_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <TextView
        android:id="@+id/activity_pleer_album_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/activityPleerStaticTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_time_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_album_name_guideline"
        app:layout_constraintEnd_toStartOf="@id/activity_pleer_album"
        android:text="@string/activity_pleer_text_album"
        />

    <TextView
        android:id="@+id/activity_pleer_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/activityPleerDynamicTextView"
        app:layout_constraintStart_toEndOf="@id/activity_pleer_album_static"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_time_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_album_name_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/activity_pleer_hint_album"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_album_name_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/activity_pleer_year_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/activityPleerStaticTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_album_name_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_year_guideline"
        app:layout_constraintEnd_toStartOf="@id/activity_pleer_year"
        android:text="@string/activity_pleer_text_year"
        />

    <TextView
        android:id="@+id/activity_pleer_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/activityPleerDynamicTextView"
        app:layout_constraintStart_toEndOf="@id/activity_pleer_year_static"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_album_name_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_year_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/activity_pleer_hint_year"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_year_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <TextView
        android:id="@+id/activity_pleer_style_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/activityPleerStaticTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_year_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_style_guideline"
        app:layout_constraintEnd_toStartOf="@id/activity_pleer_style"
        android:text="@string/activity_pleer_text_genre"
        />

    <TextView
        android:id="@+id/activity_pleer_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/activityPleerDynamicTextView"
        app:layout_constraintStart_toEndOf="@id/activity_pleer_style_static"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_year_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_style_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/activity_pleer_hint_genre"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_style_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/activity_pleer_country_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/activityPleerStaticTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_style_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_country_guideline"
        app:layout_constraintEnd_toStartOf="@id/activity_pleer_country"
        android:text="@string/activity_pleer_text_country"
        />

    <TextView
        android:id="@+id/activity_pleer_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/activityPleerDynamicTextView"
        app:layout_constraintStart_toEndOf="@id/activity_pleer_country_static"
        app:layout_constraintTop_toTopOf="@id/activity_pleer_style_guideline"
        app:layout_constraintBottom_toBottomOf="@id/activity_pleer_country_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/activity_pleer_hint_country"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_pleer_country_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

</androidx.constraintlayout.widget.ConstraintLayout>