<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/layout"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"

            android:gravity="top"

            android:text = "@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        >
        <Button
            android:id = "@+id/button_search"

            android:foreground="?attr/selectableItemBackground"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/button_main_activity_margin_top_bottom"
            android:layout_marginStart="@dimen/button_main_activity_margin_left"
            android:layout_marginEnd="@dimen/button_main_activity_margin_right"
            android:layout_weight="1"

            android:gravity="center_horizontal|center_vertical"

            app:icon = "@drawable/search"
            app:iconGravity = "textStart"
            app:iconPadding = "@dimen/icon_main_activity_padding"
            app:iconTint = "@color/button_text"
            app:cornerRadius = "@dimen/button_main_activity_corner_radius"

            android:backgroundTint="@color/white"

            android:text="@string/search"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size"
            android:textAllCaps="false"/>

        <Button
            android:id = "@+id/button_media"

            android:foreground="?attr/selectableItemBackground"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/button_main_activity_between"
            android:layout_marginStart="@dimen/button_main_activity_margin_left"
            android:layout_marginEnd="@dimen/button_main_activity_margin_right"
            android:layout_weight="1"

            android:gravity="center_horizontal|center_vertical"

            app:icon = "@drawable/media"
            app:iconGravity = "textStart"
            app:iconPadding = "@dimen/icon_main_activity_padding"
            app:iconTint = "@color/button_text"
            app:cornerRadius = "@dimen/button_main_activity_corner_radius"

            android:backgroundTint="@color/white"

            android:text="@string/media"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size"
            android:textAllCaps="false"/>

        <Button
            android:id = "@+id/button_settings"

            android:foreground="?attr/selectableItemBackground"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/button_main_activity_margin_top_bottom"
            android:layout_marginTop="@dimen/button_main_activity_between"
            android:layout_marginStart="@dimen/button_main_activity_margin_left"
            android:layout_marginEnd="@dimen/button_main_activity_margin_right"
            android:layout_weight="1"

            android:gravity="center_horizontal|center_vertical"

            app:icon = "@drawable/settings"
            app:iconGravity = "textStart"
            app:iconPadding = "@dimen/icon_main_activity_padding"
            app:iconTint = "@color/button_text"
            app:cornerRadius = "@dimen/button_main_activity_corner_radius"

            android:backgroundTint="@color/white"

            android:text="@string/settings"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>