<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchFragment"
    android:theme="@style/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="4dp"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/search"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                tools:targetApi="p"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="32dp"
        android:gravity="top"
        >
        <LinearLayout
            android:id="@+id/activity_search_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:gravity="top"
            android:background="@drawable/search_input_text_style"
            android:backgroundTint="@color/yp_light_gray"
            >
        <ImageView
            android:id="@+id/activity_search_search_image_view"
            android:theme="@style/searchImageViewActivitySearchTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingEnd="@dimen/image_view_search_activity_padding_start_or_end"
            android:paddingStart="@dimen/image_view_search_activity_padding_end_or_start"
            android:paddingTop="@dimen/image_view_search_activity_padding_top"
            android:paddingBottom="@dimen/image_view_search_activity_padding_bottom"
            />
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                >
                <EditText
                    android:id="@+id/activity_search_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search"
                    android:textColor="@color/yp_black"
                    android:inputType="text"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:backgroundTint="@color/yp_light_gray"
                    />
                <ImageView
                    android:id="@+id/activity_search_clear_image_view"
                    android:theme="@style/clearTextImageViewActivitySearchTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:paddingStart="@dimen/image_view_search_activity_padding_start_or_end"
                    android:paddingEnd="@dimen/image_view_search_activity_padding_end_or_start"
                    android:paddingTop="@dimen/image_view_search_activity_padding_top"
                    android:paddingBottom="@dimen/image_view_search_activity_padding_bottom"
                    android:visibility="gone"
                    />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar android:id="@+id/activity_search_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:indeterminateTint="@color/progress_bar_color"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/activity_search_text_view_your_searches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/activitySearchYourSearchTextView"
        android:visibility="gone"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_search_search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"
        >
    </androidx.recyclerview.widget.RecyclerView>
    <ImageView
        android:id="@+id/activity_search_empty_placeholder_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/activitySearchEmptyPlaceholderImageViewTheme"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/activity_search_empty_placeholder_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/activitySearchPlaceholderTextView"
        android:visibility="gone"
        />
    <ImageView
        android:id="@+id/activity_search_error_placeholder_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/activitySearchErrorPlaceholderImageViewTheme"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/activity_search_error_placeholder_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/activitySearchPlaceholderTextView"
        android:text="@string/error_message"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/activity_search_update_placeholder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/activitySearchButton"
        android:text="@string/update"
        android:visibility="gone"
        />
</LinearLayout>